added basic css for all sections

--- a/index.html
+++ b/index.html
@@ -1,108 +1,193 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
+    <link rel="stylesheet" href="./styles.css" />
+  </head>
+  <body>
     <nav>
-        <div class="logo">
-            <img src="./assets/logo.png" alt="">
-        </div>
-        <div class="links" >
-            <ul>
-                <li>Home</li>
-                <li>Shop</li>
-                <li>About us</li>
-                <li>Cart</li>
-            </ul>
-        </div>
+      <div class="logo">
+        <img src="./assets/logo.png" alt="" />
+      </div>
+      <div class="links">
+        <ul>
+          <li><a href="#">Home</a></li>
+          <li><a href="#">Shop</a></li>
+          <li><a href="#">About us</a></li>
+          <li><a href="#">Cart</a></li>
+        </ul>
+      </div>
     </nav>
     <section class="banner">
-        <div>
-            <h1>ALWAYS FRESH FLOWERS</h1>
-            <p>Indulge your senses with the beauty and fragrance of our fresh flower shop. 
-                From classic roses to exotic blooms, we offer a wide variety of fresh flowers that are
-                 perfect for any occasion. </p>
-        </div>
-        <div>
-            <img src="./assets/hero-flower.png" alt="">
-        </div>
+      <div class="banner-text">
+        <h1>ALWAYS FRESH FLOWERS</h1>
+        <p>
+          Indulge your senses with the beauty and fragrance of our fresh flower
+          shop. From classic roses to exotic blooms, we offer a wide variety of
+          fresh flowers that are perfect for any occasion.
+        </p>
+      </div>
+      <div class="banner-image">
+        <img src="./assets/hero-flower.png" alt="" />
+      </div>
     </section>
     <section class="plants">
-        <div>
-            <h2>Our Plants</h2>
-            <p>
-                Indulge your senses with the beauty and fragrance of our fresh flower shop. 
-                From classic roses to exotic blooms, we offer a wide variety of fresh.
-            </p>
+      <div class="plants-text">
+        <h2>Our Plants</h2>
+        <p>
+          Indulge your senses with the beauty and fragrance of our fresh flower
+          shop. From classic roses to exotic blooms, we offer a wide variety of
+          fresh.
+        </p>
+      </div>
+      <div class="cards-container">
+        <div class="cards">
+          <div>
+            <img src="./assets/sample-flower-image.png" alt="" />
+            <h3>Lily Blossom</h3>
+            <h3>20 USD</h3>
+            <button>ADD TO CART</button>
+          </div>
         </div>
         <div class="cards">
-            <div>
-                <img src="./assets/sample-flower-image.png" alt="">
-                <h3>Lily Blossom</h3>
-                <h3>20 USD</h3>
-                <button>ADD TO CART</button>
-            </div>
+          <div>
+            <img src="./assets/sample-flower-image.png" alt="" />
+            <h3>Lily Blossom</h3>
+            <h3>20 USD</h3>
+            <button>ADD TO CART</button>
+          </div>
         </div>
+        <div class="cards">
+          <div>
+            <img src="./assets/sample-flower-image.png" alt="" />
+            <h3>Lily Blossom</h3>
+            <h3>20 USD</h3>
+            <button>ADD TO CART</button>
+          </div>
+        </div>
+        <div class="cards">
+          <div>
+            <img src="./assets/sample-flower-image.png" alt="" />
+            <h3>Lily Blossom</h3>
+            <h3>20 USD</h3>
+            <button>ADD TO CART</button>
+          </div>
+        </div>
+        <div class="cards">
+          <div>
+            <img src="./assets/sample-flower-image.png" alt="" />
+            <h3>Lily Blossom</h3>
+            <h3>20 USD</h3>
+            <button>ADD TO CART</button>
+          </div>
+        </div>
+        <div class="cards">
+          <div>
+            <img src="./assets/sample-flower-image.png" alt="" />
+            <h3>Lily Blossom</h3>
+            <h3>20 USD</h3>
+            <button>ADD TO CART</button>
+          </div>
+        </div>
+        <div class="cards">
+          <div>
+            <img src="./assets/sample-flower-image.png" alt="" />
+            <h3>Lily Blossom</h3>
+            <h3>20 USD</h3>
+            <button>ADD TO CART</button>
+          </div>
+        </div>
+        <div class="cards">
+          <div>
+            <img src="./assets/sample-flower-image.png" alt="" />
+            <h3>Lily Blossom</h3>
+            <h3>20 USD</h3>
+            <button>ADD TO CART</button>
+          </div>
+        </div>
+      </div>
     </section>
     <section class="plants-lover">
-        <div>
-            <img src="./assets/flower-store.png" alt="">
-        </div>
-        <div>
-            <h2>Flower & Plants Lover</h2>
-            <ul>
-                <li>Indulge your senses with the beauty and fragrance of our fresh flower shop. 
-                    From classic roses to exotic blooms, we offer a wide variety of fresh.</li>
-                <li>Indulge your senses with the beauty and fragrance of our fresh flower shop.
-                     From classic roses to exotic blooms, we offer a wide variety of fresh.</li>
-                <li>Indulge your senses with the beauty and fragrance of our fresh flower shop. 
-                    From classic roses to exotic blooms, we offer a wide variety of fresh.</li>
-            </ul>
-        </div>
+      <div class="plants-lover-image">
+        <img src="./assets/flower-store.png" alt="" />
+      </div>
+      <div class="plants-lover-text">
+        <h2>Flower & Plants Lover</h2>
+        <ul>
+          <li>
+            Indulge your senses with the beauty and fragrance of our fresh
+            flower shop. From classic roses to exotic blooms, we offer a wide
+            variety of fresh.
+          </li>
+          <li>
+            Indulge your senses with the beauty and fragrance of our fresh
+            flower shop. From classic roses to exotic blooms, we offer a wide
+            variety of fresh.
+          </li>
+          <li>
+            Indulge your senses with the beauty and fragrance of our fresh
+            flower shop. From classic roses to exotic blooms, we offer a wide
+            variety of fresh.
+          </li>
+        </ul>
+      </div>
     </section>
     <section class="deals">
-        <div>
-            <h2>Latest  Deals</h2>
-            <p>Indulge your senses with the beauty and fragrance of our fresh flower shop.
-                 From classic roses to exotic blooms, we offer a wide variety of fresh.</p>
+      <div class="deals-text">
+        <h2>Latest Deals</h2>
+        <p>
+          Indulge your senses with the beauty and fragrance of our fresh flower
+          shop. From classic roses to exotic blooms, we offer a wide variety of
+          fresh.
+        </p>
+      </div>
+      <div class="deals-images">
+        <div class="left-column">
+          <img src="./assets/deal-bloom.png" alt="" />
+          <img src="./assets/deal-ana.png" alt="" />
         </div>
-        <div>
-            <img src="./assets/deal-bloom.png" alt="">
-            <img src="./assets/deal-ana.png" alt="">
-            <img src="./assets/deal-zabo.png" alt="">
+        <div class="right-column">
+          <img src="./assets/deal-zabo.png" alt="" />
         </div>
+      </div>
     </section>
-    <section class="join">
+    <div class="join-container">
+      <section class="join">
         <h2>Join the colorful Bunch</h2>
-        <input type="text">
-        <button>Subscribe</button>
-    </section>
+        <div class="join-input-group">
+          <input type="text" />
+          <button>Subscribe</button>
+        </div>
+      </section>
+    </div>
     <footer>
-        <img src="./assets/logo.png" alt="">
-        <p>Indulge your senses with the beauty and fragrance of our fresh flower shop. </p>
-        <ul>
-            <li>Home</li>
-            <li>About Us</li>
-            <li>Blog</li>
-            <li>FAQ</li>
-            <li>Contact Us</li>
-        </ul>
-        <ul>
-            <li>Features</li>
-            <li>Pricing</li>
-            <li>Privacy Policy</li>
-            <li>Terms of Service</li>
-            <li>Help Center</li>
-        </ul>
-        <ul>
-            <li><img src="./assets/icon-linkedin.png" alt=""></li>
-            <li><img src="./assets/icon-twitter.png" alt=""></li>
-            <li><img src="./assets/icon-facebook.png" alt=""></li>
-            <li><img src="./assets/icon-youtube.png" alt=""></li>
-        </ul>
+      <img src="./assets/logo.png" alt="" />
+      <p>
+        Indulge your senses with the beauty and fragrance of our fresh flower
+        shop.
+      </p>
+      <ul>
+        <li>Home</li>
+        <li>About Us</li>
+        <li>Blog</li>
+        <li>FAQ</li>
+        <li>Contact Us</li>
+      </ul>
+      <ul>
+        <li>Features</li>
+        <li>Pricing</li>
+        <li>Privacy Policy</li>
+        <li>Terms of Service</li>
+        <li>Help Center</li>
+      </ul>
+      <ul>
+        <li><img src="./assets/icon-linkedin.png" alt="" /></li>
+        <li><img src="./assets/icon-twitter.png" alt="" /></li>
+        <li><img src="./assets/icon-facebook.png" alt="" /></li>
+        <li><img src="./assets/icon-youtube.png" alt="" /></li>
+      </ul>
     </footer>
-</body>
+  </body>
 </html>
