updated some styles and html

--- a/index.html
+++ b/index.html
@@ -37,7 +37,10 @@
     </nav>
     <section class="banner">
       <div class="banner-text">
-        <h1>ALWAYS FRESH FLOWERS</h1>
+        <h1>
+          <span class="black">ALWAYS</span>
+          <span class="orange">FRESH FLOWERS</span>
+        </h1>
         <p>
           Indulge your senses with the beauty and fragrance of our fresh flower
           shop. From classic roses to exotic blooms, we offer a wide variety of
@@ -50,7 +53,9 @@
     </section>
     <section class="plants">
       <div class="plants-text">
-        <h2>Our Plants</h2>
+        <h2>
+          <span class="orange">Our</span> <span class="black">Plants</span>
+        </h2>
         <p>
           Indulge your senses with the beauty and fragrance of our fresh flower
           shop. From classic roses to exotic blooms, we offer a wide variety of
@@ -146,7 +151,9 @@
     </section>
     <section class="deals">
       <div class="deals-text">
-        <h2>Latest Deals</h2>
+        <h2>
+          <span class="orange">Latest</span> <span class="black">Deals</span>
+        </h2>
         <p>
           Indulge your senses with the beauty and fragrance of our fresh flower
           shop. From classic roses to exotic blooms, we offer a wide variety of
@@ -158,23 +165,23 @@
           <div class="deals-image-wrapper">
             <img src="./assets/deal-bloom.png" alt="" />
             <div class="deals-overlay">
-              <h3>Bloom Special</h3>
-              <a href="#">Shop Bloom</a>
+              <h3>60% Off | Bloom Plant</h3>
+              <a href="#"><span>Shop Now</span></a>
             </div>
           </div>
           <div class="deals-image-wrapper">
             <img src="./assets/deal-ana.png" alt="" />
             <div class="deals-overlay">
-              <h3>Ana Special</h3>
-              <a href="#">Shop Ana</a>
+              <h3>30% Off | Ana Plant</h3>
+              <a href="#"><span>Shop Now</span></a>
             </div>
           </div>
         </div>
         <div class="right-column deals-image-wrapper">
           <img src="./assets/deal-zabo.png" alt="" />
           <div class="deals-overlay">
-            <h3>Zabo Special</h3>
-            <a href="#">Shop Zabo</a>
+            <h3>25% Off | Zabo Plant</h3>
+            <a href="#"><span>Shop Now</span></a>
           </div>
         </div>
       </div>
